Revision history for Perl extension MooseX-AttributeHelpers

0.10
	- add Bool as an attribute helper (thanks to jasonmay)

0.09 Sat. May, 24, 2008
	- remove Module::Build in favor of Module::Install
	
    * MooseX::AttributeHelpers::MethodProvider::Hash
	  - delete with multiple keys will now work (thanks to frodwith)

    * MooseX::AttributeHelpers::MethodProvider::List
      - add "join" and "elements" provided methods (thanks to Sartak)
    
    * MooseX::AttributeHelpers::MethodProvider::Array
      - add "splice" provided method

0.08 Sat. April 12, 2008
    ~~ updates copyright year on all modules ~~

    * MooseX::AttributeHelpers::MethodProvider::Hash
      - fixed bug in non-type constraint version of set
        method (thanks to frodwith)

0.07 Tues. Jan. 1, 2008
    * MooseX::AttributeHelpers::String
      - Initial version
    * MooseX::AttributeHelpers::Hash
      - get and set now support aggregate operations

0.06 Tues. Dec. 7, 2007
    * MooseX::AttributeHelpers::Base
      - added the &remove_accessors method to comply with the
        Class::MOP::Attribute interface
        - added test for this
      - the &install_accessors method now also properly assocaites
        the methods with the attribute, so they are accessible via
        introspection now.

0.05 Sat. Nov. 24, 2007
    - update Class::MOP dependency
    - hide the Moose::Meta::Attribute::Custom::* package
      declarations from search.cpan.org (when did they change
      things to start seeing these?? *sigh*)

0.04 Fri. Nov. 23, 2007
    * MooseX::AttributeHelpers::Base
      - changing this to use the new Class::MOP::Attribute
        reader and write method ref stuff.
      - fixed this to use find_or_create_type_constraint
        instead of trying to parse stuff on our own.

    * MooseX::AttributeHelpers::Collection
      - this is pretty much empty subclass now cause of
        the find_or_create_type_constraint fix above
