@@ -122,17 +122,23 @@ modification of the value stored in the attribute.
 
 =over 4
 
+=item I<set>
+
+Set the counter to the specified value.
+
 =item I<inc>
 
-Increments the value stored in this slot by 1.
+Increments the value stored in this slot by 1.Providing an argument will
+cause the counter to be increased by specified amount.
 
 =item I<dec>
 
-Decrements the value stored in this slot by 1.
+Decrements the value stored in this slot by 1. Providing an argument will
+cause the counter to be increased by specified amount.
 
 =item I<reset>
 
-Resets the value stored in this slot to it's default value.
+Resets the value stored in this slot to it's default value. 
 
 =back
 
