@@ -1,6 +1,7 @@
 Revision history for Perl extension MooseX-AttributeHelpers
 
 0.10
+        - Counter: add set and allow inc and dec to accept args
 	- add Bool as an attribute helper (thanks to jasonmay)
 
 0.09 Sat. May, 24, 2008
